# logRCA

./: .gitignore  HANDOFF.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/logrca/: __init__.py  main.py
src/logrca/api/: __init__.py  app.py
src/logrca/evaluation/: __init__.py
src/logrca/generation/: __init__.py
src/logrca/ingestion/: __init__.py  catalog.py  loaders.py  models.py  pipeline.py  status.py  template_mining.py
src/logrca/orchestration/: __init__.py
src/logrca/retrieval/: __init__.py  bm25_index.py  fusion.py  models.py  rerank.py
src/logrca/ui/: __init__.py
tests/: __init__.py  test_api_bm25_search.py  test_api_ingestion_status.py  test_bm25_retrieval.py  test_fused_retrieval.py  test_health.py  test_ingestion_hdfs_2k.py  test_ingestion_pipeline.py  test_ingestion_status.py  test_reranking.py  test_template_mining.py
